--- a/danus_app/pubspec.yaml
+++ b/danus_app/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
-  dio: ^5.3.3
+  dio: ^4.0.6
   flutter_dotenv: ^5.1.0
   logger: ^2.0.1
   intl: ^0.18.1
@@ -47,17 +47,20 @@ dependencies:
   lottie: ^2.3.2
   url_launcher: ^6.1.11
   pull_to_refresh: ^2.0.0
-  http: ^1.1.0
+  image_picker: ^1.0.2
+  dotted_border: ^2.0.0+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -72,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
