--- a/danus_app/pubspec.yaml
+++ b/danus_app/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   pull_to_refresh: ^2.0.0
   image_picker: ^1.0.2
   dotted_border: ^2.0.0+2
+  test: any
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
